# whatthefood

./: .clang-format  .gitignore  Makefile  README.md  meson.build  whatthefood.make
src/: main.c  main.cpp
